<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/scan_button"
                    android:text="@string/scan_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/dodgerblue" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/button_min_height"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/warehouse_button"
                    android:text="@string/warehouse_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/honey_yellow" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/button_min_height"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/admin_button"
                    android:text="@string/admin_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/rosybrown" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/button_min_height"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/mobile_list_button"
                    android:text="@string/mobile_list_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/apple_green" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/button_min_height"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/other_button"
                    android:text="@string/other_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/purple" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/button_min_height"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>